# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/config.gni")
import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

napi_root = "//foundation/arkui/napi"
ace_root = "//foundation/arkui/ace_engine"
subsystem_root = "//foundation/communication"
bluetooth_frameworks_root = "$subsystem_root/bluetooth/frameworks"
bluetooth_napi_root = "$bluetooth_frameworks_root/js/napi"
bluetooth_inner_root = "$bluetooth_frameworks_root/inner"
hilog_root = "//base/hiviewdfx/hilog"
c_utils_root = "//commonlibrary/c_utils"
