# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

emitter_include = [
  "//foundation/appframework/ability/ability_runtime/cross_platform/frameworks/native/base/event_handler/include",
  "//third_party/bounds_checking_function/include",
  "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/inner_api/error",
  "//foundation/arkui/napi/interfaces/kits",
  "//foundation/arkui/napi/interfaces/inner_api",
  "//base/notification/eventhandler/interfaces/inner_api/",
  "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
]
